--- a/CleanArch/CleanArch.Infra.IoC/CleanArch.Infra.IoC.csproj
+++ b/CleanArch/CleanArch.Infra.IoC/CleanArch.Infra.IoC.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CleanArch.Application\CleanArch.Application.csproj" />
+    <ProjectReference Include="..\CleanArch.Infra.Bus\CleanArch.Infra.Bus.csproj" />
     <ProjectReference Include="..\CleanArch.Infra.data\CleanArch.Infra.Data.csproj" />
   </ItemGroup>
 
